src/test/ui/privacy/privacy-ns1.stderr
error[E0423]: expected function, tuple struct or tuple variant, found trait `Bar`
  --> $DIR/privacy-ns1.rs:20:5
   |
LL |     pub struct Baz;
   |     --------------- similarly named unit struct `Baz` defined here
...
LL |     Bar();
   |     ^^^
   |
help: a unit struct with a similar name exists
   |
LL |     Baz();
   |     ^^^
help: consider importing this function instead
   |
LL | use foo2::Bar;
   |

error[E0425]: cannot find function, tuple struct or tuple variant `Bar` in this scope
  --> $DIR/privacy-ns1.rs:51:5
   |
LL |     pub struct Baz;
   |     --------------- similarly named unit struct `Baz` defined here
...
LL |     Bar();
   |     ^^^
   |
help: a unit struct with a similar name exists
   |
LL |     Baz();
   |     ^^^
help: consider importing this function
   |
LL | use foo2::Bar;
   |

error[E0412]: cannot find type `Bar` in this scope
  --> $DIR/privacy-ns1.rs:52:17
   |
LL |     pub struct Baz;
   |     --------------- similarly named struct `Baz` defined here
...
LL |     let _x: Box<Bar>;
   |                 ^^^
   |
help: a struct with a similar name exists
   |
LL |     let _x: Box<Baz>;
   |                 ^^^
help: consider importing this trait
   |
LL | use foo1::Bar;
   |

error[E0107]: wrong number of const arguments: expected 0, found 1
  --> $DIR/privacy-ns1.rs:35:17
   |
LL |     let _x: Box<Bar>;
   |                 ^^^ unexpected const argument

error[E0107]: wrong number of type arguments: expected at least 1, found 0
  --> $DIR/privacy-ns1.rs:35:13
   |
LL |     let _x: Box<Bar>;
   |             ^^^^^^^^ expected at least 1 type argument

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0107, E0412, E0423, E0425.
For more information about an error, try `rustc --explain E0107`.
